<resources>
    <string name="app_name">dvbApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="serial_port">Serial Port</string>
    <string name="mode">Mode %d</string>
    <string name="omf">O2 Mask Flow %d</string>
    <string name="patm">Baro. P %d</string>
    <string name="pi">Insp. P %d</string>
    <string name="vtf">TidalFlow Vol %d</string>
    <string name="expMinVol">ExpMinVol: %d</string>
    <string name="vte">"VTE %d"</string>
    <string name="bpmMeasured">fTotal b/min %d</string>
    <string name="packetStore">123</string>
    <string name="PEEP">PEEP</string>
    <string name="min1">Min</string>
    <string name="_123_4">123.4</string>
    <string name="human">human</string>
    <string name="alarms">ALARMS</string>
    <string name="dashes">--</string>
    <string name="e">E</string>
    <string name="i">I</string>
    <string name="set_i_e_ratio">Set I:E Ratio</string>
    <string name="controls">Controls</string>
    <string name="tools">Tools</string>
    <string name="patient_info">Patient Info</string>
    <string name="events_log">Events Log</string>
    <string name="auto_skip_in_10_seconds">Auto Skip in 10 seconds</string>
    <string name="auto_skip_in_i_seconds">Auto Skip in %d seconds</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="click_quot_start_quot_to_initiate_auto_calibration">Click \"START\" to initiate Self-Test</string>
    <string name="to_ensure_safe_operation_always_run_auto_calibration_nbefore_using_ventilator_on_a_patient">To ensure safe operation, always run Self-Test \nbefore using ventilator on a patient</string>
    <string name="warning">WARNING</string>
    <string name="please_connect_quot_to_patient_quot_port_to_quot_from_patient_quot_port_directly_without_filters">Please connect \"TO PATIENT\" port to\n \"FROM PATIENT\" port directly without filters</string>
    <string name="auto_calibration">Auto Calibration</string>
    <string name="calibrated">Calibrated!</string>
    <string name="auto_skip_1_sec">Auto Skip in 1 second</string>
    <string name="done">Done</string>
    <string name="cance">Cancel</string>
    <string name="above_peep">(Above PEEP)</string>
    <string name="max">Max</string>
    <string name="inspiratory_nhold">Inspiratory \nHold</string>
    <string name="expiratory_hold">Expiratory Hold</string>
    <string name="hold_auto_release_15_secs">Holds auto release: 15 secs</string>
    <string name="setAlarmLimits">Set Alarm Limits</string>
    <string name="historic_data">Historic Data</string>
    <string name="return_to_main_screen">Return to main screen</string>
    <string name="logo">logo</string>
    <string name="mode1">Mode:</string>
    <string name="fio21">FiO2:</string>
    <string name="percent">%</string>
    <string name="d_percent">%d\%</string>
    <string name="ml">ml</string>
    <string name="flow">Flow</string>
    <string name="vtrig">Vtrig</string>
    <string name="lpm">lpm</string>
    <string name="p_insp">Pinsp</string>
    <string name="cm_h2o">cm H2O</string>
    <string name="ps">PS</string>
    <string name="b_min">b/min</string>
    <string name="t_insp">T Insp</string>
    <string name="s">s</string>
    <string name="save">Save</string>
    <string name="clear">clear</string>
    <string name="expiration">Expiration:</string>
    <string name="inspiration">Inspiration:</string>
    <string name="min_value">Min value:</string>
    <string name="max_value">Max Value:</string>
    <string name="bpap">BPAP</string>
    <string name="cpap">CPAP</string>
    <string name="hfo">HFO</string>
    <string name="acv">ACV</string>
    <string name="prvc">PRVC</string>
    <string name="psv">PSV</string>
    <string name="pc_simv">PC-SIMV</string>
    <string name="vc_simv">VC-SIMV</string>
    <string name="pc_cmv">PC-CMV</string>
    <string name="vc_cmv">VC-CMV</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="weight_kg">IBW: (kg)</string>
    <string name="height_cm">Height: (cm)</string>
    <string name="save_logs">Save Logs</string>
    <string name="show_historic_data">Show Historic data</string>
    <string name="alarm_limits">Alarm Limits</string>
    <string name="minvol_ltrs">MinVol</string>
    <string name="minvol_ltrs_unit">l</string>
    <string name="rate_b_min">Rate</string>
    <string name="rate_b_min_unit">b/min</string>
    <string name="vt_ml">Vt</string>
    <string name="vt_ml_unit">ml</string>
    <string name="p_cm_h2o">P</string>
    <string name="p_cm_h2o_unit">cm H2O</string>
    <string name="apnea_time_s">Apnea</string>
    <string name="apnea_time_s_unit">s</string>
    <string name="monitoring">Monitoring</string>
    <string name="woman">woman</string>
    <string name="man">man</string>
    <string name="name_madhav_shroff">Name: Madhav Shroff</string>
    <string name="age_20">Age: 20</string>
    <string name="height_185_cm">Height: 185 cm</string>
    <string name="weight_78_kg">IBW: 78 kg</string>
    <string name="sex_male">Sex: Male</string>
    <string name="sex">Sex: %s</string>
    <string name="edit">edit</string>
    <string name="date">Date</string>
    <string name="ppeak">Ppeak</string>
    <string name="peep">PEEP</string>
    <string name="minvol">MVtotal</string>
    <string name="vt">Vt</string>
    <string name="rate">Rtotal</string>
    <string name="fio2">FiO2</string>
    <string name="pmean">Pmean</string>
    <string name="mvspont">MVspont</string>
    <string name="i_e">I:E</string>
    <string name="flowRate">FlowRate</string>
    <string name="cstat">Cstat</string>
    <string name="alarms1">Alarms</string>
    <string name="sigh">Sigh</string>
    <string name="calibration">Auto Calibration</string>
    <string name="min">Min</string>
    <string name="loading">Loading…</string>
    <string name="female">Sex: Female</string>
    <string name="male">Sex: Male</string>
    <string name="p_max">P Max</string>
    <string name="p_limit">P Limit</string>
    <string name="show_hide">Show/Hide</string>
    <string name="snooze">Snooze</string>
    <string name="show_sidebar">Show Sidebar</string>
    <string name="hide_sidebar">Hide Sidebar</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_">Confirm\n%d</string>
    <string name="log">logs</string>
    <string name="knp_confirm">OK</string>
    <string name="knp_cancel">Cancel</string>
    <string name="system">System</string>
    <string name="start_ventilation">Start Ventilation</string>
    <string name="warning_text">Unless confirmed, values will revert in %d</string>
    <string name="silenced">Silenced\n%d</string>
    <string name="silence_alarm">Silence</string>
    <string name="_1_to_4">1 to 4</string>
    <string name="non_invasive">Non Invasive Modes</string>
    <string name="invasive_modes">Invasive Modes</string>
    <string name="set">Set: %s</string>
    <string name="loops">LOOPS</string>
    <string name="_73">73%</string>
    <string name="stop_ventilation">Stop Ventilation</string>
    <string name="hpa">hPa</string>
    <string name="respiration_time">Respiration time: </string>
    <string name="running_time">Running time:</string>
    <string name="amount_of_time_the_ventilator_has_been_running">Amount of time the ventilator has been running</string>
    <string name="usage">Usage</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="shutdown">Shutdown</string>
    <string name="maintainance">Maintenance</string>
    <string name="v1_2_2">v1.2.2</string>
    <string name="display_version">Display Version</string>
    <string name="rev_2020_07_26_1816">Rev. 2020.07.26.1816</string>
    <string name="v1_2">v1.2</string>
    <string name="system_version">System Version</string>
    <string name="total">Total</string>
    <string name="since_startup">Since Startup</string>
    <string name="_00000_hrs">00000</string>
    <string name="madhav_shroff">Madhav Shroff</string>
    <string name="male_child">Male</string>
    <string name="female_child">Female</string>
    <string name="female_adult">Female</string>
    <string name="male_adult">Male</string>
    <string name="_21">21</string>
    <string name="paediatric">Paediatric:</string>
    <string name="adult">Adult:</string>
    <string name="rspont">Rspont</string>
    <string name="ac">AC</string>
    <string name="ventilation_stopped">Ventilation Stopped</string>
    <string name="self_test">Self-Test</string>
    <string name="log_placeholder">%s(%s)</string>
    <string name="insp">INSP</string>
    <string name="bolt">bolt</string>
    <string name="control">Control:</string>
    <string name="unit">unit</string>
    <string name="edit_button">edit button</string>
    <string name="rtotal">Rate</string>
    <string name="_19">19%</string>
    <string name="room">Room:</string>
    <string name="bed">Bed:</string>
    <string name="main">Main</string>
    <string name="f_p">F/P</string>
    <string name="f_v">F/V</string>
    <string name="p_v">P/V</string>
    <string name="lock_screen">screen</string>
    <string name="system_functions">System Functions</string>
    <string name="battery_module">Battery Module</string>
    <string name="tightness">Tightness</string>
    <string name="oxygen_sensors">Oxygen Sensors</string>
    <string name="flow_sensors">Flow Sensors</string>
    <string name="pressure_sensors">Pressure Sensors</string>
    <string name="turbine_pressure_sensor_failed">Turbine Pressure Sensor Failed</string>
    <string name="inspiratory_pressure_sensor_failed">Inspiratory Pressure Sensor Failed</string>
    <string name="expiratory_pressure_sensor_failed">Expiratory Pressure Sensor Failed</string>
    <string name="o2_pressure_sensor_failed_or_o2_not_connected">O2 Pressure Sensor Failed or O2 not connected</string>
    <string name="inspiratory_flow_sensor_failed">Inspiratory Flow Sensor Failed</string>
    <string name="oxygen_flow_sensor_failed_or_o2_not_connected">O2 Flow Sensor Failed or O2 not connected</string>
    <string name="expiratory_flow_sensor_failed">Expiratory Flow Sensor Failed</string>
    <string name="oxygen_sensor_failed_or_o2_not_connected">O2 Sensor Failed or O2 not connected</string>
    <string name="tightness_failed">Tightness Failed</string>
    <string name="unable_to_read_calibration_data">Unable to read calibration data</string>
    <string name="system_processing_slow">System processing slow</string>
    <string name="percent_d">%d\%</string>
    <string name="spont">spont</string>
    <string name="ok">ok</string>
    <string name="next">NEXT</string>
    <string name="lock_button">lock button</string>
    <string name="_100">100%</string>
    <string name="ventilaton_paused">Ventilaton Paused</string>
    <string name="_3_press_to_start_ventilation">3. Press ▶ to start ventilation</string>
    <string name="lbs">lbs</string>
    <string name="kg">kg</string>
    <string name="inches">inches</string>
    <string name="cm">cm</string>
    <string name="weight_lbs">IBW: (lbs)</string>
    <string name="height_inches">Height: (in)</string>
    <string name="ibw">IBW:</string>
    <string name="height">Height:</string>
    <string name="_1_2_2">2.12.0</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="err">Error !</string>
    <string name="sleep_display">Sleep Display</string>
    <string name="shutdown_display">Shutdown Display</string>
    <string name="version">3.0.0</string>
    <string name="system_alarm">SYSTEM ALARM</string>
    <string name="nno_ups_power">\nNO UPS POWER</string>
    <string name="or">OR</string>
    <string name="communication_error_n">COMMUNICATION ERROR\n</string>
    <string name="_1_ensure_patient_safety">1.\tEnsure Patient Safety</string>
</resources>