<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control_row"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_gravity="center|top"
    android:gravity="center"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/control_label"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center|start"
        android:text="@string/fio21"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/control_unit"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/cm_h2o"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/control_current"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="23.14"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/controls_edit_button"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/greenEditButton"
        android:contentDescription="@string/edit_button"
        android:src="@drawable/ic_action_name"
        android:text="@string/edit" />
</LinearLayout>
